Removed superfluous MailChimp editor tag; fixed <h1> content.

--- a/newsletter.html
+++ b/newsletter.html
@@ -241,7 +241,7 @@ ul.sidebar li a h1,ul.sidebar li a h2,ul.sidebar li a h3,ul.sidebar li a h4,ul.s
 <body bgcolor="#FFFFFF" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0">
 
 <!-- HEADER -->
-<table class="head-wrap" bgcolor="#999999" mc:edit="header">
+<table class="head-wrap" bgcolor="#999999">
 	<tr>
 		<td></td>
 		<td class="header container" align="">
@@ -273,7 +273,7 @@ ul.sidebar li a h1,ul.sidebar li a h2,ul.sidebar li a h3,ul.sidebar li a h4,ul.s
 					<tr>
 						<td>
 							
-							<h1>*|MC:SUBJECT|*</h1>
+							<h1 mc:edit="headline">Great Scott!</h1>
 							<p mc:edit="leading-text" class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
 							
 							<!-- A Real Hero (and a real human being) -->
